--- a/java_demo/src/main/AndroidManifest.xml
+++ b/java_demo/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>"
+        </activity>
     </application>
 
 </manifest>
