--- a/c_demo/build.gradle
+++ b/c_demo/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId 'co.polarr.renderdemoclib'
         minSdkVersion 17
-        targetSdkVersion 24
+        targetSdkVersion 30
         ndk {
-            abiFilters 'arm64-v8a', 'x86'
+            abiFilters 'arm64-v8a'//,'arm64-v8a', 'x86'
         }
         externalNativeBuild {
             cmake {
-                arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=gnustl_static'
+                arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_static'
             }
         }
     }
@@ -34,4 +34,5 @@ android {
             jniLibs.srcDirs = ["src/main/cpp/jnis"]
         }
     }
+    ndkVersion '22.1.7171670'
 }
