--- a/java_demo/build.gradle
+++ b/java_demo/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId "co.polarr.polarrcamerademo"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion 19
+        targetSdkVersion 30
         versionCode 8
-        versionName "1.2"
+        versionName "1.3"
     }
 
     buildTypes {
@@ -27,7 +27,7 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 
     // render engine
     implementation(name: 'renderer-camera-release', ext: 'aar')
